--- a/notes_app_frontend/package.json
+++ b/notes_app_frontend/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "react-kavia",
+  "name": "notes-app-frontend",
   "version": "0.1.0",
   "private": true,
+  "description": "Personal notes app frontend with Ocean Professional theme and optional Supabase integration.",
   "dependencies": {
+    "@supabase/supabase-js": "^2.57.4",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1"
@@ -10,8 +13,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test --watchAll=false",
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .js,.jsx || true"
   },
   "eslintConfig": {
     "extends": "react-app"
