--- a/notes_app_frontend/.env.example
+++ b/notes_app_frontend/.env.example
@@ -1,7 +1,6 @@
-# Frontend environment variables
-# Obtain these from your Supabase project settings. Leave empty to use local mock storage.
+# Supabase (required for using Supabase backend; otherwise app uses localStorage)
 REACT_APP_SUPABASE_URL=
 REACT_APP_SUPABASE_KEY=
 
-# Optional: Public site URL for email redirects in future auth features
-REACT_APP_SITE_URL=http://localhost:3000
+# Optional site URL (future auth flows, redirects, etc.)
+REACT_APP_SITE_URL=http://localhost:3000/
